<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.distancegps.MainActivity">

    <Button
        android:id="@+id/button_getGPS"
        android:layout_width="223dp"
        android:layout_height="87dp"
        android:layout_marginBottom="160dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:onClick="getGPS"
        android:text="@string/button_getGPS"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewResult"
        app:layout_constraintVertical_bias="0.562"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp" />

    <TextView
        android:id="@+id/textViewStart"
        android:layout_width="175dp"
        android:layout_height="70dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:text="@string/textViewStart"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/textViewEnd"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewEnd"
        android:layout_width="175dp"
        android:layout_height="70dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="8dp"
        android:text="@string/textViewEnd"
        android:textAlignment="center"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewStart"
        app:layout_constraintLeft_toRightOf="@+id/textViewStart"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="354dp"
        android:layout_height="140dp"
        android:layout_marginTop="115dp"
        android:layout_weight="1"
        android:text="@string/textViewResult"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewAltitude"
        android:layout_width="137dp"
        android:layout_height="100dp"
        android:layout_marginBottom="60dp"
        android:layout_marginTop="16dp"
        android:text="@string/textViewAltitude"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/textViewAccuracy"
        app:layout_constraintTop_toBottomOf="@+id/button_getGPS"
        app:layout_constraintVertical_bias="0.189" />

    <TextView
        android:id="@+id/textViewAccuracy"
        android:layout_width="137dp"
        android:layout_height="100dp"
        android:text="@string/textViewAccuracy"
        android:textAlignment="center"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewAltitude"
        app:layout_constraintLeft_toRightOf="@+id/textViewAltitude"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>
